        made to have a security declaration on a nonexistent method.

      - OFS Application: While deprecated since years, old-style product
        metadata in the __init__.py did not show deprecation warnings. Added
        warnings and converted ZGadflyDA/__init__.py and
        ZSQLMethods/__init__.py to use registerClass instead.

  Zope 2.8.4 (2005/10/26)

    Bugs Fixed

      - Collector #1927:  Modified ZReST not to store rendered / warnings
        as persistent attributes, using volatile attributes instead as
        a cache.

      - Collector #1926: fixed a typo in _doAddUser when password
        encryption is enabled.

      - If a content object implemented any in-place numeric operators, 
        untrusted code could call them, thus modifying the content.

      - If Python 2.4 is used, despite the fact that Python 2.4 is
        unsupported, untrusted code could use generator expressions to
        gain access to container items.

  Zope 2.8.3 (2005/10/18)

    Other

      - ZSQLMethod.manage_main: Moved the error message that warns of a 
        non-existing or closed database connection next to the Connection ID
        dropdown and present it using red to increase its visibility.

      - Update to Docutils 0.3.9 (forgotten in Zope 2.8.2)

  Zope 2.8.2 (2005/10/13)

    Features added

      - Collector #1118: Added syntax to dtml-sqlgroup to support flexible
        generation of 'UPDATE' statements (bounty sponsored by Logicalware).

      - The '@' character is now allowed in object ids (RFC 1738 allows it).

    Bugs Fixed

      - OFS.Image.manage_FTPget() would str() it's .data attribute,
        potentially loading the whole file in memory as a
        string. Changed to use RESPONSE.write() iterating through the
        Pdata chain, just like index_html().

      - When PageTemplates have a syntax error, show the traceback output
        in the rendered error message.

      - Collector #1914: Hardened 'call_with_ns' (in